# Drawing-MCP

./: .gitignore  README.md  pyproject.toml
drawing_mcp/: server.py  utilities.py
drawing_mcp/drawing/: __init__.py  draw.py  shape.py  test.py
examples/: prompts.md
